--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
+# IDE
 .idea
 .vscode
+
+# Byte-compiled files
+__pycache__
+
+demo/*.acf
+demo/*.modules
+demo/*.script
+demo/*.states
+demo/*.system
+demo/*.wdl
