--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 # Scientific computing and data analysis
-numpy
-scipy
+numpy==2.0.2
+scipy==1.13.1
 
 # Plotting and visualization
-matplotlib
+matplotlib==3.9.2
 
 # GUI development
-PyQt5
+PyQt5==5.15.11
